💄 Prevent overflowing of tooltip labels when popup goes out of view

--- a/themes/shared/xul/tooltip.css
+++ b/themes/shared/xul/tooltip.css
@@ -28,6 +28,11 @@ html|tooltip {
         background-color: InfoBackground;
         color: InfoText;
 
+        /* Prevent overflow wrapping of the label */
+        white-space: pre;
+
+        text-align: start;
+
         /* Otherwise, use an appropriate color for our color scheme */
         &:-moz-lwtheme {
             appearance: none;
